--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Coursera Module 2</title>
+	<title>module2-solution</title>
 </head>
 <body>
-<h1>Module 2</h1>
+<h1>Our Menu</h1>
 </body>
 </html>
