--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+	 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 	<title>module2-solution</title>
+	<link rel="stylesheet" href="./main.css" />
 </head>
 <body>
 <h1>Our Menu</h1>
+<div class ="container">
+	<section class="first">
+	<span id="chicken"><p class="frstname">Chicken</p></span>
+	<p>
+		lorem ipsum dolor sit omet, consectetur
+		adipiscing elit, sed do eiusmod tempor incididunt
+		ut lobore et dolore magna aliqua. Ut enim ad 
+		minim veniam, quis nostrud exercitation ullamco
+		laboris nisi ut aliquip ex ea commodo consequat.
+	</p>
+	</section>
+
+	<section class="second">
+	<span id="beef"><p class="scndname">Beef</p></span>
+	<p>
+		lorem ipsum dolor sit omet, consectetur
+		adipiscing elit, sed do eiusmod tempor incididunt
+		ut lobore et dolore magna aliqua. Ut enim ad 
+		minim veniam, quis nostrud exercitation ullamco
+		laboris nisi ut aliquip ex ea commodo consequat.
+	</p>
+	</section>
+
+	<section class="third">
+	<span id="sushi"><p class="thrdname">Sushi</p></span>
+	<p>
+		lorem ipsum dolor sit omet, consectetur
+		adipiscing elit, sed do eiusmod tempor incididunt
+		ut lobore et dolore magna aliqua. Ut enim ad 
+		minim veniam, quis nostrud exercitation ullamco
+		laboris nisi ut aliquip ex ea commodo consequat.
+	</p>
+	</section>
+</div>
 </body>
 </html>
